# TouPing

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: bg.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
camera2andcamerax/: build.gradle
camera2andcamerax/src/main/: AndroidManifest.xml
camera2andcamerax/src/main/res/layout/: activity_main.xml
camera2andcamerax/src/main/res/values/: strings.xml
camerato264/: build.gradle
camerato264/src/main/: AndroidManifest.xml
camerato264/src/main/res/values/: strings.xml  themes.xml
camerato265/: build.gradle
camerato265/src/main/: AndroidManifest.xml
camerato265/src/main/res/layout/: activity_main.xml
camerato265/src/main/res/values/: strings.xml
data/音视频预习资料/: 音视频高手课01-Clang交叉编译最新FFmpeg.md  音视频高手课02-FFmpeg引入AndroidStudio.md  音视频高手课03-音视频格式封装原理.md  音视频高手课04-H264编码基础-编码标准之战.md  音视频高手课05-H264直播讲解04编码与解码器流程.md  音视频高手课06-H264编码基础01帧与场.md  音视频高手课06-H264编码基础03帧内预测.md  音视频高手课07-H264编码基础03帧内预测.md  音视频高手课07-视频流H264的组装原理切片NAL单元.md  音视频高手课07-视频流H264码流分析实战.md  音视频高手课08-H264 I帧 P帧 B帧.md
gradle/wrapper/: gradle-wrapper.properties
receiver/: build.gradle
receiver/src/main/: AndroidManifest.xml
receiver/src/main/res/layout/: activity_main.xml
receiver/src/main/res/values/: strings.xml
rtmp/: build.gradle
rtmp/src/main/: AndroidManifest.xml
rtmp/src/main/cpp/: CMakeLists.txt  native-lib.cpp
rtmp/src/main/cpp/librtmp/: CMakeLists.txt
rtmp/src/main/res/layout/: activity_main.xml
(+38 files in other folders)
